tests/e2e/keywords/function_is_keyword.error
Error: syntax error in story at line 1, column 10

1|    function = 1
               ^

E0041: `=` is not allowed here
